--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,6 @@
     <div id="root"></div>
   </body>
 
-  <script type="text/javascript" src="popup.js"></script>
+  <script src="popup.js"></script>
 </html>
 
